# SOMEIP-Demo

./: CMakeLists.txt  generate.sh  readme.md
build_win32/: Acef.sln  AcefClient.vcxproj  AcefService.vcxproj  CommShared.vcxproj
cgen/commonapi_core_generator/configuration/org.eclipse.osgi/: framework.info.6
cgen/commonapi_core_generator/configuration/org.eclipse.osgi/.manager/: .fileTable.7
cgen/commonapi_someip_generator/configuration/org.eclipse.osgi/: framework.info.2
cgen/commonapi_someip_generator/configuration/org.eclipse.osgi/.manager/: .fileTable.3
fidl/: Comm.fdepl  Comm.fidl
install/: CommonAPI.ilk  runAcefClient.bat  runAcefClient.sh  runAcefService.bat  runAcefService.sh  vsomeip-client.json  vsomeip-local.json  vsomeip-service.json
lib/: libCommonAPI.so.3.2.0  libvsomeip3-e2e.so.3.3.0
src/: AcefClient.cpp  AcefService.cpp  CommStubImpl.cpp  CommStubImpl.hpp
src-gen/v1/commonapi/demo/: Comm.hpp  CommProxy.hpp  CommProxyBase.hpp  CommSomeIPDeployment.cpp  CommSomeIPDeployment.hpp  CommSomeIPProxy.cpp  CommSomeIPProxy.hpp  CommSomeIPStubAdapter.cpp  CommSomeIPStubAdapter.hpp  CommStub.hpp  CommStubDefault.hpp  CommonTypes.hpp  CommonTypesSomeIPDeployment.cpp  CommonTypesSomeIPDeployment.hpp
